// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PublicationsSelect > renders checked when selected 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper ant-checkbox-wrapper-checked css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-mncuj7 ant-checkbox-checked"
    >
      <input
        checked=""
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`PublicationsSelect > renders unchecked when not selected 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-mncuj7"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </label>
</DocumentFragment>
`;

exports[`PublicationsSelect > sets publication selection on checkbox change 1`] = `
<DocumentFragment>
  <label
    class="ant-checkbox-wrapper css-dev-only-do-not-override-mncuj7"
  >
    <span
      class="ant-checkbox ant-wave-target css-dev-only-do-not-override-mncuj7"
    >
      <input
        class="ant-checkbox-input"
        type="checkbox"
      />
      <span
        class="ant-checkbox-inner"
      />
    </span>
  </label>
</DocumentFragment>
`;
